Fixde dropdown menus hiding behind Material Tables

--- a/FrontEnd/src/clubDashboard/pages/ClubDashboardToolbar.css
+++ b/FrontEnd/src/clubDashboard/pages/ClubDashboardToolbar.css
@@ -179,7 +179,7 @@ li {
 	width: 100%;
 	min-width: 160px;
 	/*box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); */
-	z-index: 1;
+	z-index: 1000;
 	line-height: 1rem;
 }
 
